# fastai-starter

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  USING_STARTER.md  pyproject.toml  requirements.txt  ruff.toml
src/: main.py
src/tests/: conftest.py  test_endpoint.py
