[project]
name = "fastai-starter"
version = "0.1.0"
description = "FastAI Starter Repository for backend developers."
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "editorconfig-checker==3.2.1",
    "fastapi[standard]==0.115.12",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff==0.11.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

